--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Graphe Interactif</title>
+    <title>Interactive Graph</title>
     <style>
         body {
             display: flex;
@@ -107,45 +107,45 @@
 </head>
 <body>
     <div id="matrix-container">
-        <h2>Matrice d'Adjacence</h2>
+        <h2>Adjacency Matrix</h2>
         <table id="matrix">
-            <!-- La matrice sera générée dynamiquement -->
+            <!-- The matrix will be generated dynamically -->
         </table>
         
         <div id="analysis">
-            <h3>Propriétés du Graphe</h3>
+            <h3>Graph Properties</h3>
             <div class="property">
-                <span class="property-label">Nombre de sommets:</span>
+                <span class="property-label">Number of vertices:</span>
                 <span class="property-value info" id="num-vertices">0</span>
             </div>
             <div class="property">
-                <span class="property-label">Nombre d'arêtes:</span>
+                <span class="property-label">Number of edges:</span>
                 <span class="property-value info" id="num-edges">0</span>
             </div>
             <div class="property">
-                <span class="property-label">Complet:</span>
+                <span class="property-label">Complete:</span>
                 <span class="property-value" id="is-complete">-</span>
             </div>
             <div class="property">
-                <span class="property-label">Réflexif:</span>
+                <span class="property-label">Reflexive:</span>
                 <span class="property-value" id="is-reflexive">-</span>
             </div>
             <div class="property">
-                <span class="property-label">Symétrique:</span>
+                <span class="property-label">Symmetric:</span>
                 <span class="property-value" id="is-symmetric">-</span>
             </div>
             <div class="property">
-                <span class="property-label">Antisymétrique:</span>
+                <span class="property-label">Antisymmetric:</span>
                 <span class="property-value" id="is-antisymmetric">-</span>
             </div>
             <div class="property">
-                <span class="property-label">Transitif:</span>
+                <span class="property-label">Transitive:</span>
                 <span class="property-value" id="is-transitive">-</span>
             </div>
         </div>
     </div>
     <div id="canvas-container">
-        <h2>Zone de Clic (Ajoutez des Points)</h2>
+        <h2>Click Area (Add Points)</h2>
         <div id="canvas">
             <svg id="lines">
             </svg>
@@ -162,7 +162,7 @@
         const linesSvg = document.getElementById('lines');
         const matrixTable = document.getElementById('matrix');
 
-        // Charger la matrice et les points au démarrage
+        // Load matrix and points on startup
         async function loadData() {
             const response = await fetch('/matrix');
             const data = await response.json();
@@ -183,18 +183,18 @@
                 const elem = document.getElementById(prop);
                 const key = prop.replace(/-/g, '_');
                 const value = analysis[key];
-                elem.textContent = value ? 'Oui' : 'Non';
+                elem.textContent = value ? 'Yes' : 'No';
                 elem.className = 'property-value ' + (value ? 'true' : 'false');
             });
         }
 
         canvas.addEventListener('click', async function(event) {
-            if (event.target.classList.contains('point')) return; // Ignore si clic sur point
+            if (event.target.classList.contains('point')) return; // Ignore if clicking on point
             const rect = canvas.getBoundingClientRect();
             const x = event.clientX - rect.left;
             const y = event.clientY - rect.top;
 
-            // Envoyer au serveur
+            // Send to server
             const response = await fetch('/add_point', {
                 method: 'POST',
                 headers: {
@@ -204,7 +204,7 @@
             });
             const result = await response.json();
 
-            // Recharger les données
+            // Reload data
             await loadData();
         });
 
@@ -218,12 +218,12 @@
         });
 
         function updateMatrix(matrixData) {
-            // Vider la matrice
+            // Clear the matrix
             matrixTable.innerHTML = '';
 
-            // Ajouter l'en-tête
+            // Add header
             const headerRow = document.createElement('tr');
-            headerRow.appendChild(document.createElement('th')); // Coin vide
+            headerRow.appendChild(document.createElement('th')); // Empty corner
             for (let i = 0; i < points.length; i++) {
                 const th = document.createElement('th');
                 th.textContent = points[i].id;
@@ -231,7 +231,7 @@
             }
             matrixTable.appendChild(headerRow);
 
-            // Ajouter les lignes
+            // Add rows
             for (let i = 0; i < points.length; i++) {
                 const row = document.createElement('tr');
                 const th = document.createElement('th');
@@ -248,17 +248,17 @@
         }
 
         function updateCanvas() {
-            // Vider le canvas sauf SVG
+            // Clear canvas except SVG
             const svg = canvas.querySelector('svg');
             canvas.innerHTML = '';
             canvas.appendChild(svg);
 
-            // Ajouter les points
+            // Add points
             points.forEach(point => {
-                if (!point.color) point.color = '#ff0000'; // Couleur par défaut pour anciens points
+                if (!point.color) point.color = '#ff0000'; // Default color for old points
                 const pointDiv = document.createElement('div');
                 pointDiv.className = 'point';
-                pointDiv.style.left = (point.x - 15) + 'px'; // Centrer (30/2 = 15)
+                pointDiv.style.left = (point.x - 15) + 'px'; // Center (30/2 = 15)
                 pointDiv.style.top = (point.y - 15) + 'px';
                 pointDiv.textContent = point.id;
                 pointDiv.style.backgroundColor = point.color;
@@ -268,7 +268,7 @@
                         selectedPoint = point.id;
                         startTempLine(point.x, point.y, point.color);
                     } else if (selectedPoint !== point.id) {
-                        // Créer le lien
+                        // Create link
                         await fetch('/add_link', {
                             method: 'POST',
                             headers: { 'Content-Type': 'application/json' },
@@ -278,7 +278,7 @@
                         removeTempLine();
                         await loadData();
                     } else {
-                        // Clic sur le même point : créer une self-loop
+                        // Click on same point: create a self-loop
                         await fetch('/add_link', {
                             method: 'POST',
                             headers: { 'Content-Type': 'application/json' },
@@ -294,7 +294,7 @@
         }
 
         function updateLinks() {
-            // Vider les lignes sauf temp
+            // Clear lines except temp
             const lines = linesSvg.querySelectorAll('line:not(.temp), polygon:not(.temp), path:not(.temp)');
             lines.forEach(l => l.remove());
 
@@ -303,7 +303,7 @@
                 const toPoint = points.find(p => p.id === link.to);
                 if (fromPoint && toPoint) {
                     if (link.from === link.to) {
-                        // Self-loop : dessiner un arc
+                        // Self-loop: draw an arc
                         const radius = 20;
                         const cx = fromPoint.x;
                         const cy = fromPoint.y - radius;
@@ -315,10 +315,10 @@
                         path.setAttribute('opacity', '0.6');
                         linesSvg.appendChild(path);
 
-                        // Flèche pour self-loop
+                        // Arrow for self-loop
                         const arrowX = cx + radius / 4;
                         const arrowY = cy;
-                        const angle = Math.PI; // Vers la gauche
+                        const angle = Math.PI; // To the left
                         const arrowLength = 15;
                         const arrowWidth = 7;
                         const p1x = arrowX - arrowLength * Math.cos(angle) - arrowWidth * Math.sin(angle);
@@ -334,12 +334,12 @@
                         arrow.setAttribute('opacity', '0.6');
                         linesSvg.appendChild(arrow);
                     } else {
-                        // Ligne normale
-                        // Calculer les coordonnées pour arrêter la ligne avant le point d'arrivée
+                        // Normal line
+                        // Calculate coordinates to stop the line before the destination point
                         const dx = toPoint.x - fromPoint.x;
                         const dy = toPoint.y - fromPoint.y;
                         const dist = Math.sqrt(dx * dx + dy * dy);
-                        const offset = 20; // Distance avant le point
+                        const offset = 20; // Distance before point
                         const ratio = (dist - offset) / dist;
                         const x2 = fromPoint.x + dx * ratio;
                         const y2 = fromPoint.y + dy * ratio;
@@ -354,7 +354,7 @@
                         line.setAttribute('opacity', '0.6');
                         linesSvg.appendChild(line);
 
-                        // Ajouter la flèche (triangle)
+                        // Add arrow (triangle)
                         const angle = Math.atan2(dy, dx);
                         const arrowLength = 10;
                         const arrowWidth = 7;
@@ -416,7 +416,7 @@
                 tempLine.setAttribute('x2', x2);
                 tempLine.setAttribute('y2', y2);
 
-                // Calculer la flèche
+                // Calculate arrow
                 const angle = Math.atan2(dy, dx);
                 const arrowLength = 10;
                 const arrowWidth = 7;
@@ -444,7 +444,7 @@
             }
         }
 
-        // Charger au démarrage
+        // Load on startup
         loadData();
     </script>
 </body>
